# HomepageRs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  HomepageRs.code-workspace  README.md  TODO  bacon.toml  config.example.yaml  docker-compose.yml
.github/workflows/: build.yml  docker-build-push.yml  docker-hub.yml  docker-image.yml  docker.yml  lint.yml  rust-ci.yml  rust-lint-build-test.yml
nav/: Cargo.toml
nav/src/: lib.rs
site/: Cargo.toml  Dockerfile
site/src/: content.rs  lib.rs  main.rs
site/static/css/: style.css
site/static/js/: image-slider.js
site/static/pkg/: nav.d.ts  nav.js  nav_bg.wasm  nav_bg.wasm.d.ts  package.json
site/templates/: education.html.hbs  experience.html.hbs  index.html.hbs  layout.html.hbs  links.html.hbs  nav.html.hbs
site/templates/error/: 500.html.hbs
src/: config.rs  content.rs  github.rs  lib.rs  main.rs
static/css/: style.css
static/js/: image-slider.js  key-presses.js  nav.js
templates/: education.html.hbs  experience.html.hbs  index.html.hbs  layout.html.hbs  links.html.hbs  nav.html.hbs  projects.html.hbs
templates/error/: 404.html.hbs  500.html.hbs
tests/: content.rs  index.rs
tests/fixtures/: test_config.yaml
