[package]
name = "nav"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3.4", features = [
                                "Document",
                                "Element",
                                "HtmlElement",
                                "HtmlBodyElement",
                                "Node",
                                "NodeList",
                                "Window",
                                "console",
                                "MouseEvent",
                                "DomTokenList"
                                ] }
